Compiladores/y.output
Terminais sem uso na gramática

   TK_BREAK
   TK_CONTINUE
   TK_OP_AND
   TK_OP_XOR
   TK_OP_IOR
   TK_TIPO_INDEFINIDO
   TK_TIPO_INT
   TK_TIPO_FLOAT
   TK_TIPO_CHAR
   TK_TIPO_BOOL
   TK_TIPO_STRING
   TK_CLASSE_VARIAVEL
   TK_CLASSE_FUNCAO
   TK_FIM
   TK_ERROR
   '+'
   '-'
   '*'
   '/'


Gramática

    0 $accept: S $end

    1 S: TK_TIPO TK_MAIN '(' ')' BLOCO

    2 BLOCO: '{' COMANDOS '}'

    3 COMANDOS: COMANDO COMANDOS
    4         | %empty

    5 COMANDO: CMD_DECLARACOES ';'
    6        | CMD_IF
    7        | CMD_WHILE
    8        | CMD_DOWHILE
    9        | CMD_FOR
   10        | CMD_SWITCH
   11        | '#'

   12 COMANDOS_FOR: COMANDO_FOR ',' COMANDOS_FOR
   13             | COMANDO_FOR

   14 COMANDO_FOR: ATRIBUICAO

   15 EXP_SIMPLES: TK_LITERAL
   16            | TK_ID
   17            | '(' EXPRESSAO ')'
   18            | TK_TIPO '(' EXPRESSAO ')'

   19 EXP_NOT: EXP_SIMPLES
   20        | TK_OP_NOT EXP_NOT

   21 EXP_ARITMETICA_MUL: EXP_NOT
   22                   | EXP_ARITMETICA_MUL TK_OP_MUL EXP_NOT

   23 EXP_ARITMETICA_ADD: EXP_ARITMETICA_MUL
   24                   | EXP_ARITMETICA_ADD TK_OP_ADD EXP_ARITMETICA_MUL

   25 EXP_RELACIONAL: EXP_ARITMETICA_ADD
   26               | EXP_RELACIONAL OP_RELACIONAL EXP_ARITMETICA_ADD

   27 EXP_IGUALDADE: EXP_RELACIONAL
   28              | EXP_IGUALDADE TK_OP_IGUALDADE EXP_RELACIONAL

   29 EXP_LOGICAL_AND: EXP_IGUALDADE
   30                | EXP_LOGICAL_AND TK_OP_LOGICAL_AND EXP_IGUALDADE

   31 EXP_LOGICAL_OR: EXP_LOGICAL_AND
   32               | EXP_LOGICAL_OR TK_OP_LOGICAL_OR EXP_LOGICAL_AND

   33 EXPRESSAO: EXP_LOGICAL_OR

   34 ATRIBUICAO: TK_ID '=' EXPRESSAO

   35 CMD_DECLARACOES: TK_VAR LIST_DECLARACOES
   36                | ATRIBUICAO

   37 LIST_DECLARACOES: DECLARACAO ',' LIST_DECLARACOES
   38                 | DECLARACAO

   39 DECLARACAO: TK_ID
   40           | TK_ID '=' EXPRESSAO

   41 CMD_IF: TK_IF '(' EXPRESSAO ')' BLOCO
   42       | TK_IF '(' EXPRESSAO ')' BLOCO TK_ELSE BLOCO

   43 CMD_WHILE: TK_WHILE '(' EXPRESSAO ')' BLOCO

   44 CMD_DOWHILE: TK_DO BLOCO TK_WHILE '(' EXPRESSAO ')'

   45 $@1: %empty

   46 CMD_FOR: TK_FOR $@1 '(' CMD_DECLARACOES ';' EXPRESSAO ';' COMANDOS_FOR ')' BLOCO

   47 $@2: %empty

   48 $@3: %empty

   49 CMD_FOR: TK_FOR $@2 TK_ID '(' EXPRESSAO ',' OP_COMPARATIVOS EXPRESSAO ')' BLOCO $@3

   50 $@4: %empty

   51 CMD_SWITCH: TK_SWITCH '(' TK_ID ')' $@4 '{' BLOCO_SWITCH '}'

   52 BLOCO_SWITCH: BLOCO_SWITCH EXP_CASE
   53             | %empty

   54 EXP_CASE: TK_CASE TK_LITERAL BLOCO
   55         | TK_DEFAULT BLOCO

   56 OP_RELACIONAL: '<'
   57              | '>'
   58              | TK_OP_MAIORIGUAL
   59              | TK_OP_MENORIGUAL

   60 OP_COMPARATIVOS: OP_RELACIONAL
   61                | TK_OP_IGUALDADE
   62                | TK_OP_DESIGUALDADE


Terminais, com as regras onde eles aparecem

$end (0) 0
'#' (35) 11
'(' (40) 1 17 18 41 42 43 44 46 49 51
')' (41) 1 17 18 41 42 43 44 46 49 51
'*' (42)
'+' (43)
',' (44) 12 37 49
'-' (45)
'/' (47)
';' (59) 5 46
'<' (60) 56
'=' (61) 34 40
'>' (62) 57
'{' (123) 2 51
'}' (125) 2 51
error (256)
TK_LITERAL (258) 15 54
TK_ID (259) 16 34 39 40 49 51
TK_MAIN (260) 1
TK_VAR (261) 35
TK_TIPO (262) 1 18
TK_IF (263) 41 42
TK_ELSE (264) 42
TK_WHILE (265) 43 44
TK_DO (266) 44
TK_FOR (267) 46 49
TK_SWITCH (268) 51
TK_CASE (269) 54
TK_BREAK (270)
TK_CONTINUE (271)
TK_DEFAULT (272) 55
TK_OP_IGUALDADE (273) 28 61
TK_OP_DESIGUALDADE (274) 62
TK_OP_MAIORIGUAL (275) 58
TK_OP_MENORIGUAL (276) 59
TK_OP_NOT (277) 20
TK_OP_LOGICAL_AND (278) 30
TK_OP_AND (279)
TK_OP_LOGICAL_OR (280) 32
TK_OP_XOR (281)
TK_OP_IOR (282)
TK_OP_ADD (283) 24
TK_OP_MUL (284) 22
TK_TIPO_INDEFINIDO (285)
TK_TIPO_INT (286)
TK_TIPO_FLOAT (287)
TK_TIPO_CHAR (288)
TK_TIPO_BOOL (289)
TK_TIPO_STRING (290)
TK_CLASSE_VARIAVEL (291)
TK_CLASSE_FUNCAO (292)
TK_FIM (293)
TK_ERROR (294)


Não terminais com as regras onde eles aparecem

$accept (54)
    à esquerda: 0
S (55)
    à esquerda: 1, à direita: 0
BLOCO (56)
    à esquerda: 2, à direita: 1 41 42 43 44 46 49 54 55
COMANDOS (57)
    à esquerda: 3 4, à direita: 2 3
COMANDO (58)
    à esquerda: 5 6 7 8 9 10 11, à direita: 3
COMANDOS_FOR (59)
    à esquerda: 12 13, à direita: 12 46
COMANDO_FOR (60)
    à esquerda: 14, à direita: 12 13
EXP_SIMPLES (61)
    à esquerda: 15 16 17 18, à direita: 19
EXP_NOT (62)
    à esquerda: 19 20, à direita: 20 21 22
EXP_ARITMETICA_MUL (63)
    à esquerda: 21 22, à direita: 22 23 24
EXP_ARITMETICA_ADD (64)
    à esquerda: 23 24, à direita: 24 25 26
EXP_RELACIONAL (65)
    à esquerda: 25 26, à direita: 26 27 28
EXP_IGUALDADE (66)
    à esquerda: 27 28, à direita: 28 29 30
EXP_LOGICAL_AND (67)
    à esquerda: 29 30, à direita: 30 31 32
EXP_LOGICAL_OR (68)
    à esquerda: 31 32, à direita: 32 33
EXPRESSAO (69)
    à esquerda: 33, à direita: 17 18 34 40 41 42 43 44 46 49
ATRIBUICAO (70)
    à esquerda: 34, à direita: 14 36
CMD_DECLARACOES (71)
    à esquerda: 35 36, à direita: 5 46
LIST_DECLARACOES (72)
    à esquerda: 37 38, à direita: 35 37
DECLARACAO (73)
    à esquerda: 39 40, à direita: 37 38
CMD_IF (74)
    à esquerda: 41 42, à direita: 6
CMD_WHILE (75)
    à esquerda: 43, à direita: 7
CMD_DOWHILE (76)
    à esquerda: 44, à direita: 8
CMD_FOR (77)
    à esquerda: 46 49, à direita: 9
$@1 (78)
    à esquerda: 45, à direita: 46
$@2 (79)
    à esquerda: 47, à direita: 49
$@3 (80)
    à esquerda: 48, à direita: 49
CMD_SWITCH (81)
    à esquerda: 51, à direita: 10
$@4 (82)
    à esquerda: 50, à direita: 51
BLOCO_SWITCH (83)
    à esquerda: 52 53, à direita: 51 52
EXP_CASE (84)
    à esquerda: 54 55, à direita: 52
OP_RELACIONAL (85)
    à esquerda: 56 57 58 59, à direita: 26 60
OP_COMPARATIVOS (86)
    à esquerda: 60 61 62, à direita: 49


Estado 0

    0 $accept: . S $end

    TK_TIPO  deslocar, e ir ao estado 1

    S  ir ao estado 2


Estado 1

    1 S: TK_TIPO . TK_MAIN '(' ')' BLOCO

    TK_MAIN  deslocar, e ir ao estado 3


Estado 2

    0 $accept: S . $end

    $end  deslocar, e ir ao estado 4


Estado 3

    1 S: TK_TIPO TK_MAIN . '(' ')' BLOCO

    '('  deslocar, e ir ao estado 5


Estado 4

    0 $accept: S $end .

    $padrão  aceitar


Estado 5

    1 S: TK_TIPO TK_MAIN '(' . ')' BLOCO

    ')'  deslocar, e ir ao estado 6


Estado 6

    1 S: TK_TIPO TK_MAIN '(' ')' . BLOCO

    '{'  deslocar, e ir ao estado 7

    BLOCO  ir ao estado 8


Estado 7

    2 BLOCO: '{' . COMANDOS '}'

    TK_ID      deslocar, e ir ao estado 9
    TK_VAR     deslocar, e ir ao estado 10
    TK_IF      deslocar, e ir ao estado 11
    TK_WHILE   deslocar, e ir ao estado 12
    TK_DO      deslocar, e ir ao estado 13
    TK_FOR     deslocar, e ir ao estado 14
    TK_SWITCH  deslocar, e ir ao estado 15
    '#'        deslocar, e ir ao estado 16

    $padrão  reduzir usando a regra 4 (COMANDOS)

    COMANDOS         ir ao estado 17
    COMANDO          ir ao estado 18
    ATRIBUICAO       ir ao estado 19
    CMD_DECLARACOES  ir ao estado 20
    CMD_IF           ir ao estado 21
    CMD_WHILE        ir ao estado 22
    CMD_DOWHILE      ir ao estado 23
    CMD_FOR          ir ao estado 24
    CMD_SWITCH       ir ao estado 25


Estado 8

    1 S: TK_TIPO TK_MAIN '(' ')' BLOCO .

    $padrão  reduzir usando a regra 1 (S)


Estado 9

   34 ATRIBUICAO: TK_ID . '=' EXPRESSAO

    '='  deslocar, e ir ao estado 26


Estado 10

   35 CMD_DECLARACOES: TK_VAR . LIST_DECLARACOES

    TK_ID  deslocar, e ir ao estado 27

    LIST_DECLARACOES  ir ao estado 28
    DECLARACAO        ir ao estado 29


Estado 11

   41 CMD_IF: TK_IF . '(' EXPRESSAO ')' BLOCO
   42       | TK_IF . '(' EXPRESSAO ')' BLOCO TK_ELSE BLOCO

    '('  deslocar, e ir ao estado 30


Estado 12

   43 CMD_WHILE: TK_WHILE . '(' EXPRESSAO ')' BLOCO

    '('  deslocar, e ir ao estado 31


Estado 13

   44 CMD_DOWHILE: TK_DO . BLOCO TK_WHILE '(' EXPRESSAO ')'

    '{'  deslocar, e ir ao estado 7

    BLOCO  ir ao estado 32


Estado 14

   46 CMD_FOR: TK_FOR . $@1 '(' CMD_DECLARACOES ';' EXPRESSAO ';' COMANDOS_FOR ')' BLOCO
   49        | TK_FOR . $@2 TK_ID '(' EXPRESSAO ',' OP_COMPARATIVOS EXPRESSAO ')' BLOCO $@3

    TK_ID     reduzir usando a regra 47 ($@2)
    $padrão  reduzir usando a regra 45 ($@1)

    $@1  ir ao estado 33
    $@2  ir ao estado 34


Estado 15

   51 CMD_SWITCH: TK_SWITCH . '(' TK_ID ')' $@4 '{' BLOCO_SWITCH '}'

    '('  deslocar, e ir ao estado 35


Estado 16

   11 COMANDO: '#' .

    $padrão  reduzir usando a regra 11 (COMANDO)


Estado 17

    2 BLOCO: '{' COMANDOS . '}'

    '}'  deslocar, e ir ao estado 36


Estado 18

    3 COMANDOS: COMANDO . COMANDOS

    TK_ID      deslocar, e ir ao estado 9
    TK_VAR     deslocar, e ir ao estado 10
    TK_IF      deslocar, e ir ao estado 11
    TK_WHILE   deslocar, e ir ao estado 12
    TK_DO      deslocar, e ir ao estado 13
    TK_FOR     deslocar, e ir ao estado 14
    TK_SWITCH  deslocar, e ir ao estado 15
    '#'        deslocar, e ir ao estado 16

    $padrão  reduzir usando a regra 4 (COMANDOS)

    COMANDOS         ir ao estado 37
    COMANDO          ir ao estado 18
    ATRIBUICAO       ir ao estado 19
    CMD_DECLARACOES  ir ao estado 20
    CMD_IF           ir ao estado 21
    CMD_WHILE        ir ao estado 22
    CMD_DOWHILE      ir ao estado 23
    CMD_FOR          ir ao estado 24
    CMD_SWITCH       ir ao estado 25


Estado 19

   36 CMD_DECLARACOES: ATRIBUICAO .

    $padrão  reduzir usando a regra 36 (CMD_DECLARACOES)


Estado 20

    5 COMANDO: CMD_DECLARACOES . ';'

    ';'  deslocar, e ir ao estado 38


Estado 21

    6 COMANDO: CMD_IF .

    $padrão  reduzir usando a regra 6 (COMANDO)


Estado 22

    7 COMANDO: CMD_WHILE .

    $padrão  reduzir usando a regra 7 (COMANDO)


Estado 23

    8 COMANDO: CMD_DOWHILE .

    $padrão  reduzir usando a regra 8 (COMANDO)


Estado 24

    9 COMANDO: CMD_FOR .

    $padrão  reduzir usando a regra 9 (COMANDO)


Estado 25

   10 COMANDO: CMD_SWITCH .

    $padrão  reduzir usando a regra 10 (COMANDO)


Estado 26

   34 ATRIBUICAO: TK_ID '=' . EXPRESSAO

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 48
    EXP_IGUALDADE       ir ao estado 49
    EXP_LOGICAL_AND     ir ao estado 50
    EXP_LOGICAL_OR      ir ao estado 51
    EXPRESSAO           ir ao estado 52


Estado 27

   39 DECLARACAO: TK_ID .
   40           | TK_ID . '=' EXPRESSAO

    '='  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 39 (DECLARACAO)


Estado 28

   35 CMD_DECLARACOES: TK_VAR LIST_DECLARACOES .

    $padrão  reduzir usando a regra 35 (CMD_DECLARACOES)


Estado 29

   37 LIST_DECLARACOES: DECLARACAO . ',' LIST_DECLARACOES
   38                 | DECLARACAO .

    ','  deslocar, e ir ao estado 54

    $padrão  reduzir usando a regra 38 (LIST_DECLARACOES)


Estado 30

   41 CMD_IF: TK_IF '(' . EXPRESSAO ')' BLOCO
   42       | TK_IF '(' . EXPRESSAO ')' BLOCO TK_ELSE BLOCO

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 48
    EXP_IGUALDADE       ir ao estado 49
    EXP_LOGICAL_AND     ir ao estado 50
    EXP_LOGICAL_OR      ir ao estado 51
    EXPRESSAO           ir ao estado 55


Estado 31

   43 CMD_WHILE: TK_WHILE '(' . EXPRESSAO ')' BLOCO

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 48
    EXP_IGUALDADE       ir ao estado 49
    EXP_LOGICAL_AND     ir ao estado 50
    EXP_LOGICAL_OR      ir ao estado 51
    EXPRESSAO           ir ao estado 56


Estado 32

   44 CMD_DOWHILE: TK_DO BLOCO . TK_WHILE '(' EXPRESSAO ')'

    TK_WHILE  deslocar, e ir ao estado 57


Estado 33

   46 CMD_FOR: TK_FOR $@1 . '(' CMD_DECLARACOES ';' EXPRESSAO ';' COMANDOS_FOR ')' BLOCO

    '('  deslocar, e ir ao estado 58


Estado 34

   49 CMD_FOR: TK_FOR $@2 . TK_ID '(' EXPRESSAO ',' OP_COMPARATIVOS EXPRESSAO ')' BLOCO $@3

    TK_ID  deslocar, e ir ao estado 59


Estado 35

   51 CMD_SWITCH: TK_SWITCH '(' . TK_ID ')' $@4 '{' BLOCO_SWITCH '}'

    TK_ID  deslocar, e ir ao estado 60


Estado 36

    2 BLOCO: '{' COMANDOS '}' .

    $padrão  reduzir usando a regra 2 (BLOCO)


Estado 37

    3 COMANDOS: COMANDO COMANDOS .

    $padrão  reduzir usando a regra 3 (COMANDOS)


Estado 38

    5 COMANDO: CMD_DECLARACOES ';' .

    $padrão  reduzir usando a regra 5 (COMANDO)


Estado 39

   15 EXP_SIMPLES: TK_LITERAL .

    $padrão  reduzir usando a regra 15 (EXP_SIMPLES)


Estado 40

   16 EXP_SIMPLES: TK_ID .

    $padrão  reduzir usando a regra 16 (EXP_SIMPLES)


Estado 41

   18 EXP_SIMPLES: TK_TIPO . '(' EXPRESSAO ')'

    '('  deslocar, e ir ao estado 61


Estado 42

   20 EXP_NOT: TK_OP_NOT . EXP_NOT

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES  ir ao estado 44
    EXP_NOT      ir ao estado 62


Estado 43

   17 EXP_SIMPLES: '(' . EXPRESSAO ')'

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 48
    EXP_IGUALDADE       ir ao estado 49
    EXP_LOGICAL_AND     ir ao estado 50
    EXP_LOGICAL_OR      ir ao estado 51
    EXPRESSAO           ir ao estado 63


Estado 44

   19 EXP_NOT: EXP_SIMPLES .

    $padrão  reduzir usando a regra 19 (EXP_NOT)


Estado 45

   21 EXP_ARITMETICA_MUL: EXP_NOT .

    $padrão  reduzir usando a regra 21 (EXP_ARITMETICA_MUL)


Estado 46

   22 EXP_ARITMETICA_MUL: EXP_ARITMETICA_MUL . TK_OP_MUL EXP_NOT
   23 EXP_ARITMETICA_ADD: EXP_ARITMETICA_MUL .

    TK_OP_MUL  deslocar, e ir ao estado 64

    $padrão  reduzir usando a regra 23 (EXP_ARITMETICA_ADD)


Estado 47

   24 EXP_ARITMETICA_ADD: EXP_ARITMETICA_ADD . TK_OP_ADD EXP_ARITMETICA_MUL
   25 EXP_RELACIONAL: EXP_ARITMETICA_ADD .

    TK_OP_ADD  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 25 (EXP_RELACIONAL)


Estado 48

   26 EXP_RELACIONAL: EXP_RELACIONAL . OP_RELACIONAL EXP_ARITMETICA_ADD
   27 EXP_IGUALDADE: EXP_RELACIONAL .

    TK_OP_MAIORIGUAL  deslocar, e ir ao estado 66
    TK_OP_MENORIGUAL  deslocar, e ir ao estado 67
    '<'               deslocar, e ir ao estado 68
    '>'               deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 27 (EXP_IGUALDADE)

    OP_RELACIONAL  ir ao estado 70


Estado 49

   28 EXP_IGUALDADE: EXP_IGUALDADE . TK_OP_IGUALDADE EXP_RELACIONAL
   29 EXP_LOGICAL_AND: EXP_IGUALDADE .

    TK_OP_IGUALDADE  deslocar, e ir ao estado 71

    $padrão  reduzir usando a regra 29 (EXP_LOGICAL_AND)


Estado 50

   30 EXP_LOGICAL_AND: EXP_LOGICAL_AND . TK_OP_LOGICAL_AND EXP_IGUALDADE
   31 EXP_LOGICAL_OR: EXP_LOGICAL_AND .

    TK_OP_LOGICAL_AND  deslocar, e ir ao estado 72

    $padrão  reduzir usando a regra 31 (EXP_LOGICAL_OR)


Estado 51

   32 EXP_LOGICAL_OR: EXP_LOGICAL_OR . TK_OP_LOGICAL_OR EXP_LOGICAL_AND
   33 EXPRESSAO: EXP_LOGICAL_OR .

    TK_OP_LOGICAL_OR  deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 33 (EXPRESSAO)


Estado 52

   34 ATRIBUICAO: TK_ID '=' EXPRESSAO .

    $padrão  reduzir usando a regra 34 (ATRIBUICAO)


Estado 53

   40 DECLARACAO: TK_ID '=' . EXPRESSAO

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 48
    EXP_IGUALDADE       ir ao estado 49
    EXP_LOGICAL_AND     ir ao estado 50
    EXP_LOGICAL_OR      ir ao estado 51
    EXPRESSAO           ir ao estado 74


Estado 54

   37 LIST_DECLARACOES: DECLARACAO ',' . LIST_DECLARACOES

    TK_ID  deslocar, e ir ao estado 27

    LIST_DECLARACOES  ir ao estado 75
    DECLARACAO        ir ao estado 29


Estado 55

   41 CMD_IF: TK_IF '(' EXPRESSAO . ')' BLOCO
   42       | TK_IF '(' EXPRESSAO . ')' BLOCO TK_ELSE BLOCO

    ')'  deslocar, e ir ao estado 76


Estado 56

   43 CMD_WHILE: TK_WHILE '(' EXPRESSAO . ')' BLOCO

    ')'  deslocar, e ir ao estado 77


Estado 57

   44 CMD_DOWHILE: TK_DO BLOCO TK_WHILE . '(' EXPRESSAO ')'

    '('  deslocar, e ir ao estado 78


Estado 58

   46 CMD_FOR: TK_FOR $@1 '(' . CMD_DECLARACOES ';' EXPRESSAO ';' COMANDOS_FOR ')' BLOCO

    TK_ID   deslocar, e ir ao estado 9
    TK_VAR  deslocar, e ir ao estado 10

    ATRIBUICAO       ir ao estado 19
    CMD_DECLARACOES  ir ao estado 79


Estado 59

   49 CMD_FOR: TK_FOR $@2 TK_ID . '(' EXPRESSAO ',' OP_COMPARATIVOS EXPRESSAO ')' BLOCO $@3

    '('  deslocar, e ir ao estado 80


Estado 60

   51 CMD_SWITCH: TK_SWITCH '(' TK_ID . ')' $@4 '{' BLOCO_SWITCH '}'

    ')'  deslocar, e ir ao estado 81


Estado 61

   18 EXP_SIMPLES: TK_TIPO '(' . EXPRESSAO ')'

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 48
    EXP_IGUALDADE       ir ao estado 49
    EXP_LOGICAL_AND     ir ao estado 50
    EXP_LOGICAL_OR      ir ao estado 51
    EXPRESSAO           ir ao estado 82


Estado 62

   20 EXP_NOT: TK_OP_NOT EXP_NOT .

    $padrão  reduzir usando a regra 20 (EXP_NOT)


Estado 63

   17 EXP_SIMPLES: '(' EXPRESSAO . ')'

    ')'  deslocar, e ir ao estado 83


Estado 64

   22 EXP_ARITMETICA_MUL: EXP_ARITMETICA_MUL TK_OP_MUL . EXP_NOT

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES  ir ao estado 44
    EXP_NOT      ir ao estado 84


Estado 65

   24 EXP_ARITMETICA_ADD: EXP_ARITMETICA_ADD TK_OP_ADD . EXP_ARITMETICA_MUL

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 85


Estado 66

   58 OP_RELACIONAL: TK_OP_MAIORIGUAL .

    $padrão  reduzir usando a regra 58 (OP_RELACIONAL)


Estado 67

   59 OP_RELACIONAL: TK_OP_MENORIGUAL .

    $padrão  reduzir usando a regra 59 (OP_RELACIONAL)


Estado 68

   56 OP_RELACIONAL: '<' .

    $padrão  reduzir usando a regra 56 (OP_RELACIONAL)


Estado 69

   57 OP_RELACIONAL: '>' .

    $padrão  reduzir usando a regra 57 (OP_RELACIONAL)


Estado 70

   26 EXP_RELACIONAL: EXP_RELACIONAL OP_RELACIONAL . EXP_ARITMETICA_ADD

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 86


Estado 71

   28 EXP_IGUALDADE: EXP_IGUALDADE TK_OP_IGUALDADE . EXP_RELACIONAL

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 87


Estado 72

   30 EXP_LOGICAL_AND: EXP_LOGICAL_AND TK_OP_LOGICAL_AND . EXP_IGUALDADE

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 48
    EXP_IGUALDADE       ir ao estado 88


Estado 73

   32 EXP_LOGICAL_OR: EXP_LOGICAL_OR TK_OP_LOGICAL_OR . EXP_LOGICAL_AND

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 48
    EXP_IGUALDADE       ir ao estado 49
    EXP_LOGICAL_AND     ir ao estado 89


Estado 74

   40 DECLARACAO: TK_ID '=' EXPRESSAO .

    $padrão  reduzir usando a regra 40 (DECLARACAO)


Estado 75

   37 LIST_DECLARACOES: DECLARACAO ',' LIST_DECLARACOES .

    $padrão  reduzir usando a regra 37 (LIST_DECLARACOES)


Estado 76

   41 CMD_IF: TK_IF '(' EXPRESSAO ')' . BLOCO
   42       | TK_IF '(' EXPRESSAO ')' . BLOCO TK_ELSE BLOCO

    '{'  deslocar, e ir ao estado 7

    BLOCO  ir ao estado 90


Estado 77

   43 CMD_WHILE: TK_WHILE '(' EXPRESSAO ')' . BLOCO

    '{'  deslocar, e ir ao estado 7

    BLOCO  ir ao estado 91


Estado 78

   44 CMD_DOWHILE: TK_DO BLOCO TK_WHILE '(' . EXPRESSAO ')'

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43

    EXP_SIMPLES         ir ao estado 44
    EXP_NOT             ir ao estado 45
    EXP_ARITMETICA_MUL  ir ao estado 46
    EXP_ARITMETICA_ADD  ir ao estado 47
    EXP_RELACIONAL      ir ao estado 48
    EXP_IGUALDADE       ir ao estado 49
    EXP_LOGICAL_AND     ir ao estado 50
    EXP_LOGICAL_OR      ir ao estado 51
    EXPRESSAO           ir ao estado 92


Estado 79

   46 CMD_FOR: TK_FOR $@1 '(' CMD_DECLARACOES . ';' EXPRESSAO ';' COMANDOS_FOR ')' BLOCO

    ';'  deslocar, e ir ao estado 93


Estado 80

   49 CMD_FOR: TK_FOR $@2 TK_ID '(' . EXPRESSAO ',' OP_COMPARATIVOS EXPRESSAO ')' BLOCO $@3

    TK_LITERAL  deslocar, e ir ao estado 39
    TK_ID       deslocar, e ir ao estado 40
    TK_TIPO     deslocar, e ir ao estado 41
    TK_OP_NOT   deslocar, e ir ao estado 42
    '('         deslocar, e ir ao estado 43
